@@ -3,6 +3,7 @@ Align numbers right (bug #912)
 CSS: Dark mode syntax highlighting
 SQL textarea: Open help on Ctrl+click
 Designs named adminer-dark.css use dark basic style
+Plugins: add method syntaxHighlighting()
 
 Adminer 5.0.5 (released 2025-03-13):
 MySQL: Display converting function for binary, bit or geometry fields
